# wiki-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/wiki_cli/: __init__.py  activity.py  anthropic.py  arxiv.py  cli.py  constants.py  content.py  indexing.py  lesswrong.py  linting.py  models.py  notes.py  paths.py  sep.py  sep_notes.py  templates.py  utils.py
src/wiki_cli/commands/: __init__.py  ingest.py  maintenance.py  workspace.py
tests/: __init__.py  conftest.py  support.py  test_anthropic.py  test_arxiv.py  test_cli.py  test_indexing.py  test_lesswrong.py  test_linting.py  test_notes.py  test_paths.py  test_sep.py  test_utils.py
tests/fixtures/anthropic/: biology_excerpt.html
tests/fixtures/arxiv_smoke/1706-03762/: main.tex
tests/fixtures/arxiv_smoke/2012-14913/: main.tex
tests/fixtures/arxiv_smoke/2203-02155/: main.tex
tests/fixtures/arxiv_smoke/2204-05862/: main.tex
