[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-cli"
version = "0.1.0"
description = "CLI tools for maintaining an LLM-assisted philosophy wiki"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "ruff",
]

[project.scripts]
wiki = "wiki_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
extend-exclude = [
  "src/*.egg-info",
]

[tool.ruff.lint]
fixable = ["ALL"]
