[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-cli"
version = "0.1.0"
description = "CLI tools for maintaining an LLM-assisted research wiki"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3,<5",
  "pyright>=1.1.408",
  "pytest>=8.4,<9",
  "ruff>=0.15.11,<0.16",
]

[project.scripts]
wiki = "wiki_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["main.py", "src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]
extend-exclude = [
  "src/*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "SIM",
  "RUF",
]
ignore = ["E501"]
fixable = ["ALL"]
